--- a/component-input-emojis/package.json
+++ b/component-input-emojis/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rn-selector-emojis",
+  "name": "component-input-emojis",
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
@@ -15,10 +15,10 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/native": "^6.0.2",
-    "expo": "~51.0.26",
+    "expo": "~51.0.28",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.21",
+    "expo-router": "~3.5.23",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
@@ -26,7 +26,6 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
-    "react-native-emoji-selector": "^0.2.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
